update home page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Simpleone blog</title>
+    <title>SimpleOne Blog</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -86,15 +86,28 @@
                 <div class="col-sm-5">
                   <div class="header-content">
                       <div class="header-content-inner">
-                        <div class="ch-item">
-                           <img src="img/me.jpg" class="img-responsive" alt="" style="border-radius: 50%;">
-            						</div>
+                        <ul class="ch-grid">
+                          <li>
+                            <div class="ch-item">
+                              <div class="ch-info-wrap">
+                                <div class="ch-info">
+                                  <div class="ch-info-front ch-img"></div>
+                                  <div class="ch-info-back">
+                                    <h3>LANH NGUYEN</h3>
+                                    <p> student at Bach Khoa University <a href="https://www.facebook.com/lanh.nguyen.2580">View on Facebook</a></p>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </li>
+                        </ul>
                       </div>
                   </div>
                 </div>
             </div>
         </div>
     </header>
+
     <footer>
         <div class="container">
             <p>&copy; 2016 Start Bootstrap. All Rights Reserved.</p>
