--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#download">Download</a>
+                        <a class="page-scroll" href="#books">Favourite Books</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#features">Features</a>
@@ -107,6 +107,21 @@
             </div>
         </div>
     </header>
+
+    <section id="books" class="download bg-primary text-center">
+           <div class="container">
+               <div class="row">
+                   <div class="col-md-8 col-md-offset-2">
+                       <h2 class="section-heading">Discover what all the buzz is about!</h2>
+                       <p>Our app is available on any mobile device! Download now to get started!</p>
+                       <div class="badges">
+                           <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
+                           <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
+                       </div>
+                   </div>
+               </div>
+           </div>
+    </section>
 
     <footer>
         <div class="container">
