--- a/index.html
+++ b/index.html
@@ -57,10 +57,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
+                        <a class="page-scroll" href="#">Computer Science</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#books">Favourite Books</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#features">Features</a>
+                        <a class="page-scroll" href="#features">Around the World</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#game">Game</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -108,12 +114,12 @@
         </div>
     </header>
 
-    <section id="books" class="download bg-primary text-center">
+    <section id="books" class="books bg-primary text-center">
            <div class="container">
                <div class="row">
                    <div class="col-md-8 col-md-offset-2">
-                       <h2 class="section-heading">Discover what all the buzz is about!</h2>
-                       <p>Our app is available on any mobile device! Download now to get started!</p>
+                       <h2 class="section-heading">Some books!</h2>
+                       <p>blabla...</p>
                        <div class="badges">
                            <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
                            <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
@@ -121,6 +127,83 @@
                    </div>
                </div>
            </div>
+    </section>
+
+    <section id="features" class="features">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="section-heading">
+                        <h2>The Culture Secret</h2>
+                        <p class="text-muted">Check out what you can do with this app theme!</p>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+              <div class="container-fluid">
+                  <div class="row">
+                      <div class="col-md-6">
+                          <div class="feature-item">
+                              <i class="icon-heart"></i>
+                              <h3>Vietnam in my heart</h3>
+                              <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                          </div>
+                      </div>
+                      <div class="col-md-6">
+                          <div class="feature-item">
+                              <i class="icon-camera text-primary"></i>
+                              <h3>Flexible Use</h3>
+                              <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="row">
+                      <div class="col-md-6">
+                          <div class="feature-item">
+                              <i class="icon-present text-primary"></i>
+                              <h3>Free to Use</h3>
+                              <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                          </div>
+                      </div>
+                      <div class="col-md-6">
+                          <div class="feature-item">
+                              <i class="icon-people"></i>
+                              <h3>Open Source</h3>
+                              <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="game" class="game">
+        <div class="game-content">
+            <div class="container">
+                <h2>Stop waiting...<br>Play game!</h2>
+                <a href="#contact" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>
+            </div>
+        </div>
+        <div class="overlay"></div>
+    </section>
+
+    <section id="contact" class="contact bg-primary">
+        <div class="container">
+            <h2>We <i class="fa fa-heart"></i> new friends!</h2>
+            <ul class="list-inline list-social">
+                <li class="social-twitter">
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                </li>
+                <li class="social-facebook">
+                    <a href="http://facebook.com/lanh.nguyen.2580"><i class="fa fa-facebook"></i></a>
+                </li>
+                <li class="social-google-plus">
+                    <a href="#"><i class="fa fa-google-plus"></i></a>
+                </li>
+            </ul>
+        </div>
     </section>
 
     <footer>
