--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,700' rel='stylesheet' type='text/css' />
 		<script type="text/javascript" src="js/modernizr.custom.79639.js"></script>
 
+    <link rel="stylesheet" type="text/css" href="css/style_book.css" />
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700,300|Prata' rel='stylesheet' type='text/css' />
+		<script type="text/javascript" src="js/modernizr.custom.26887.js"></script>
+
 </head>
 
 <body id="page-top">
@@ -116,15 +120,59 @@
 
     <section id="books" class="books bg-primary text-center">
            <div class="container">
+             <div class="row">
+                 <div class="col-lg-12 text-center">
+                     <div class="section-heading">
+                         <h2>Interesting Books</h2>
+                         <p class="text-muted">Check out what you can do with this app theme!</p>
+                         <hr>
+                     </div>
+                 </div>
+             </div>
                <div class="row">
-                   <div class="col-md-8 col-md-offset-2">
-                       <h2 class="section-heading">Some books!</h2>
-                       <p>blabla...</p>
-                       <div class="badges">
-                           <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
-                           <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
-                       </div>
-                   </div>
+                 <div class="fs-slider" id="fs-slider">
+                 					<figure>
+                 						<img src="img/1.jpg" alt="image01" />
+                 						<figcaption>
+                 							<h3>Eloquence</h3>
+                 							<p>American apparel flexitarian put a bird on it, mixtape typewriter irony aesthetic. </p>
+                 						</figcaption>
+                 					</figure>
+
+                 					<figure>
+                 						<img src="img/2.jpg" alt="image02" />
+                 						<figcaption>
+                 							<h3>Quintessential</h3>
+                 							<p>Cardigan craft beer mixtape, skateboard forage fixie truffaut messenger bag. </p>
+                 						</figcaption>
+                 					</figure>
+
+                 					<figure>
+                 						<img src="img/3.jpg" alt="image03" />
+                 						<figcaption>
+                 							<h3>Surreptitious</h3>
+                 							<p>Truffaut iphone flexitarian, banh mi thundercats cliche wolf biodiesel gastropub. </p>
+                 						</figcaption>
+                 					</figure>
+
+                 					<figure>
+                 						<img src="img/4.jpg" alt="image04" />
+                 						<figcaption>
+                 							<h3>Imbroglio</h3>
+                 							<p>Scenester fixie pickled, shoreditch fugiat enim craft beer retro mustache.</p>
+                 						</figcaption>
+                 					</figure>
+
+                 					<figure>
+                 						<img src="img/5.jpg" alt="image05" />
+                 						<figcaption>
+                 							<h3>Lissome</h3>
+                 							<p>Aute sunt aliqua do sapiente. Food truck ut sustainable thundercats four loko.</p>
+                 						</figcaption>
+                 					</figure>
+
+                 				</div><!-- /fs-slider -->
+
                </div>
            </div>
     </section>
@@ -234,6 +282,15 @@
 
     <!-- Theme JavaScript -->
     <script src="js/new-age.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+		<script type="text/javascript" src="js/jquery.imgslider.js"></script>
+		<script type="text/javascript">
+			$(function() {
+
+				$( '#fs-slider' ).imgslider();
+
+			});
+		</script>
 
 </body>
 
