--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 		<script type="text/javascript" src="js/modernizr.custom.79639.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/style_book.css" />
+      <link rel="stylesheet" type="text/css" href="css/style_audio.css" />
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700,300|Prata' rel='stylesheet' type='text/css' />
 		<script type="text/javascript" src="js/modernizr.custom.26887.js"></script>
 
@@ -56,6 +57,7 @@
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">SimpleOne Blog</a>
             </div>
+
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -78,6 +80,14 @@
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
+            <div id="backgroundaudio">
+              <i class="icon-volume-up">
+                <i class="icon-earphones-alt"></i>
+              </i>
+              <audio autoplay="" controls="" loop="" preload="">
+                <source src="https://s3.amazonaws.com/Syntaxxx/bigger-picture.mp3" type="audio/mpeg">
+              </audio>
+            </div>
         </div>
         <!-- /.container-fluid -->
     </nav>
@@ -117,6 +127,7 @@
             </div>
         </div>
     </header>
+
 
     <section id="books" class="books bg-primary text-center">
            <div class="container">
