--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#">Computer Science</a>
+                        <a class="page-scroll" href="#features">Computer Science</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#books">Favourite Books</a>
+                        <a class="page-scroll" href="#">Favourite Books</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#features">Around the World</a>
+                        <a class="page-scroll" href="#">Around the World</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#game">Game</a>
+                        <a class="page-scroll" href="#">Game</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -85,7 +85,7 @@
                 <i class="icon-earphones-alt"></i>
               </i>
               <audio autoplay="" controls="" loop="" preload="">
-                <source src="https://s3.amazonaws.com/Syntaxxx/bigger-picture.mp3" type="audio/mpeg">
+                <source src="sound/only-love.mp3" type="audio/mpeg">
               </audio>
             </div>
         </div>
@@ -128,73 +128,13 @@
         </div>
     </header>
 
-
-    <section id="books" class="books bg-primary text-center">
-           <div class="container">
-             <div class="row">
-                 <div class="col-lg-12 text-center">
-                     <div class="section-heading">
-                         <h2>Interesting Books</h2>
-                         <p class="text-muted">Check out what you can do with this app theme!</p>
-                         <hr>
-                     </div>
-                 </div>
-             </div>
-               <div class="row">
-                 <div class="fs-slider" id="fs-slider">
-                 					<figure>
-                 						<img src="img/1.jpg" alt="image01" />
-                 						<figcaption>
-                 							<h3>Eloquence</h3>
-                 							<p>American apparel flexitarian put a bird on it, mixtape typewriter irony aesthetic. </p>
-                 						</figcaption>
-                 					</figure>
-
-                 					<figure>
-                 						<img src="img/2.jpg" alt="image02" />
-                 						<figcaption>
-                 							<h3>Quintessential</h3>
-                 							<p>Cardigan craft beer mixtape, skateboard forage fixie truffaut messenger bag. </p>
-                 						</figcaption>
-                 					</figure>
-
-                 					<figure>
-                 						<img src="img/3.jpg" alt="image03" />
-                 						<figcaption>
-                 							<h3>Surreptitious</h3>
-                 							<p>Truffaut iphone flexitarian, banh mi thundercats cliche wolf biodiesel gastropub. </p>
-                 						</figcaption>
-                 					</figure>
-
-                 					<figure>
-                 						<img src="img/4.jpg" alt="image04" />
-                 						<figcaption>
-                 							<h3>Imbroglio</h3>
-                 							<p>Scenester fixie pickled, shoreditch fugiat enim craft beer retro mustache.</p>
-                 						</figcaption>
-                 					</figure>
-
-                 					<figure>
-                 						<img src="img/5.jpg" alt="image05" />
-                 						<figcaption>
-                 							<h3>Lissome</h3>
-                 							<p>Aute sunt aliqua do sapiente. Food truck ut sustainable thundercats four loko.</p>
-                 						</figcaption>
-                 					</figure>
-
-                 				</div><!-- /fs-slider -->
-
-               </div>
-           </div>
-    </section>
-
-    <section id="features" class="features">
+	<section id="features" class="features" style="padding:75px">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-heading">
-                        <h2>The Culture Secret</h2>
-                        <p class="text-muted">Check out what you can do with this app theme!</p>
+                        <h2>Data Scientist</h2>
+                        <p class="text-muted">The Sexiest Job of the 21st Century!</p>
                         <hr>
                     </div>
                 </div>
@@ -202,50 +142,20 @@
             <div class="row">
               <div class="container-fluid">
                   <div class="row">
-                      <div class="col-md-6">
-                          <div class="feature-item">
-                              <i class="icon-heart"></i>
-                              <h3>Vietnam in my heart</h3>
-                              <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
-                          </div>
-                      </div>
-                      <div class="col-md-6">
-                          <div class="feature-item">
-                              <i class="icon-camera text-primary"></i>
-                              <h3>Flexible Use</h3>
-                              <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="row">
-                      <div class="col-md-6">
-                          <div class="feature-item">
-                              <i class="icon-present text-primary"></i>
-                              <h3>Free to Use</h3>
-                              <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
-                          </div>
-                      </div>
-                      <div class="col-md-6">
-                          <div class="feature-item">
-                              <i class="icon-people"></i>
-                              <h3>Open Source</h3>
-                              <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
-                          </div>
-                      </div>
+                        <div class="row">
+						  <div class="container-fluid">
+							  <div class="row">
+								<div class="feature-item">
+									<i class="icon-book-open"></i>
+									<h3>Top 10 Machine Learning Algorithms</h3>
+								</div>
+							  </div>
+						  </div>
+						</div>
                   </div>
               </div>
             </div>
         </div>
-    </section>
-
-    <section id="game" class="game">
-        <div class="game-content">
-            <div class="container">
-                <h2>Stop waiting...<br>Play game!</h2>
-                <a href="#contact" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>
-            </div>
-        </div>
-        <div class="overlay"></div>
     </section>
 
     <section id="contact" class="contact bg-primary">
